Removed unnecessary arguments from a few hand actions and code redundancy.